Basic functions done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<router-outlet></router-outlet>
+<header>
+  <div class="bar"></div>
+  <span class="logo">
+    <span class="ti ti-vaccine" style="font-size: 2rem;"></span>
+  </span>
+</header>
+<div id="content">
+  <router-outlet></router-outlet>
+</div>
