--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,47 @@
 @use './scss/tabler-icons' with(
   $ti-font-path: '../assets/tabler'
 );
+
+html, body, input, button, textarea {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+body {
+  background: hsl(143, 53%, 47%);
+}
+
+h1, h2, h3, h4, h5, h6{
+  margin: 0;
+  padding: 0;
+}
+
+
+h1{
+  font-weight: 100;
+  text-align: center;
+  margin-bottom: .5rem;
+}
+
+h2{
+  font-weight: 400;
+  margin-bottom: .4rem;
+  border-bottom: 1px solid #CCC;
+}
+
+
+button, .btn{
+  border: none;
+  padding: 0.3rem;
+  border-radius: 0.3rem;
+  background-color: hsl(207, 53%, 47%);
+  color: white;
+  text-decoration: none;
+}
+
+button.cancel, .btn.cancel{
+  background-color: hsl(07, 53%, 47%);
+}
+button.success, .btn.submit{
+  background-color: hsl(125, 53%, 47%);
+}
