--- a/src/app/shared/cert-details/cert-details.component.html
+++ b/src/app/shared/cert-details/cert-details.component.html
@@ -6,14 +6,19 @@
   <dt>Date of Birth</dt>
   <dd>{{cert.date_birth}}</dd>
   <dt>Disease or agent targeted</dt>
-  <dd>{{cert.disease}}</dd>
-  <dd class="small">840539006</dd>
+  <dd>{{cert.disease}}
+    <br><span class="raw">840539006</span>
+  </dd>
   <dt>Vaccine/Prophylaxis</dt>
-  <dd>{{cert.vaccine}}</dd>
-  <dd class="small">J07BX03</dd>
+  <dd>{{cert.vaccine}}
+    <br><span class="raw">J07BX03</span>
+  </dd>
   <dd>{{cert.medicinal_product}}</dd>
   <dt>Vaccine Marketing authorisation holder or manufacturer</dt>
-  <dd>{{cert.manufacturer}}</dd>
+  <dd>
+    {{cert.manufacturer}}
+    <br><span class="raw">MSDL</span>
+  </dd>
   <dt>Number in a series of vaccinations/doses and the overall number of doses in the series</dt>
   <dd>{{cert.number_total}}</dd>
   <dt>Date of vaccination</dt>
