--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,49 @@
 @use './scss/tabler-icons' with(
   $ti-font-path: '../assets/tabler'
 );
+@use './scss/theme';
+
+$light: (
+  "background" : hsl(170, 100%, 24%),
+  "panel"      : hsl(0, 0%, 93%),
+
+  // text colors
+  "primary"    : hsl(0, 0%, 13%),
+  "secondary"  : hsl(0, 0%, 47%),
+  "accent"     : hsl(170, 100%, 24%),
+
+  "success"    : hsl(170, 100%, 45%),
+  "cancel"     : hsl(0, 100%, 45%)
+);
+// backgrounds
+$dark: (
+  "background" : hsl(170, 100%, 12%),
+  "panel"      : hsl(0, 0%, 10%),
+
+  // text colors
+  "primary"    : hsl(0, 0%, 80%),
+  "secondary"  : hsl(0, 0%, 47%),
+  "accent"     : hsl(170, 100%, 24%),
+
+  "success"    : hsl(170, 100%, 23%),
+  "cancel"     : hsl(0, 100%, 23%)
+);
+
+
+@media (prefers-color-scheme: light) {
+  @include theme.apply($light);
+}
+@media (prefers-color-scheme: dark) {
+  @include theme.apply($dark);
+}
+
+* {
+  box-sizing: border-box;
+}
 
 html, body, input, button, textarea {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-body {
-  background: hsl(143, 53%, 47%);
 }
 
 h1, h2, h3, h4, h5, h6{
@@ -32,18 +67,18 @@ h2{
 
 button, .btn{
   border: none;
-  padding: 0.3rem;
+  padding: 0.5rem;
   border-radius: 0.3rem;
   background-color: hsl(207, 53%, 47%);
-  color: white;
   text-decoration: none;
   cursor: pointer;
   display: inline-block;
+  font-weight: 600;
+  font-size: 1rem;
 }
 
-button.cancel, .btn.cancel{
-  background-color: hsl(07, 53%, 47%);
-}
-button.success, .btn.submit{
-  background-color: hsl(125, 53%, 47%);
+
+.instructions {
+  color: #666;
+  font-style: italic;
 }
