--- a/src/app/add/scan/scan.component.html
+++ b/src/app/add/scan/scan.component.html
@@ -2,12 +2,17 @@
 <select *ngIf="cameras.length > 1">
   <option *ngFor="let cam of cameras" value="{{cam.deviceId}}">{{cam.label}}</option>
 </select>
-<zxing-scanner #scanner></zxing-scanner>
-<div class="note" *ngIf="note !== ''">
-  {{note}}
+<div class="scanner">
+  <div>
+    <span class="ti ti-camera"></span><br>
+    <p [ngSwitch]="displayMesg">
+      <span *ngSwitchCase="'permission-pending'">Please authorize the application to access the camera</span>
+      <span *ngSwitchCase="'permission-denied'">You have denied the application to access the camera</span>
+      <span *ngSwitchCase="'camera-loading'">Camera is loading</span>
+    </p>
+  </div>
+  <zxing-scanner #scanner></zxing-scanner>
 </div>
 <div *ngIf="displayTest">
-  <a class="btn" (click)="test('vaccine')">TEST VACCINE</a>
-  <br><a class="btn" (click)="test('pcr')">TEST PCR</a>
-  <br><a class="btn" (click)="test('recovery')">TEST RECOVERY</a>
+  <a class="btn" (click)="test('vaccine')">VACCINE</a> - <a class="btn" (click)="test('pcr')">PCR</a> - <a class="btn" (click)="test('recovery')">RECOVERY</a>
 </div>
