--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,8 +12,9 @@ $light: (
   "secondary"  : hsl(0, 0%, 47%),
   "accent"     : hsl(170, 100%, 24%),
 
-  "success"    : hsl(170, 100%, 45%),
-  "cancel"     : hsl(0, 100%, 45%)
+  "success"    : hsl(170, 100%, 23%),
+  "cancel"     : hsl(0, 70%, 25%),
+  "btn-primary": hsl(0, 0%, 100%),
 );
 // backgrounds
 $dark: (
@@ -26,59 +27,49 @@ $dark: (
   "accent"     : hsl(170, 100%, 24%),
 
   "success"    : hsl(170, 100%, 23%),
-  "cancel"     : hsl(0, 100%, 23%)
+  "cancel"     : hsl(0, 100%, 23%),
+  "btn-primary": hsl(0, 0%, 93%),
 );
 
 
+// Ultra generic clauses and property reset
+* {
+  box-sizing: border-box;
+}
+html, body, input, button, textarea {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+h1, h2, h3, h4, h5, h6, p{
+  margin: 0;
+  padding: 0;
+}
+
+// Non-color related general clauses
+p{
+  margin-bottom: 1rem;
+  line-height: 1.47rem;
+}
+
+header{
+  position: sticky;
+  box-shadow: 0 0 15px rgba(0,0,0,0.3);
+  text-align: center;
+  padding: .2rem;
+}
+
+.panel {
+  margin: 1rem auto;
+  padding: 1rem;
+  max-width: 40rem;
+  border-radius: 1rem;
+  box-shadow: 0 0 15px rgba(0,0,0,0.3);
+}
+
+// Create a theme for both color scheem
 @media (prefers-color-scheme: light) {
   @include theme.apply($light);
 }
 @media (prefers-color-scheme: dark) {
   @include theme.apply($dark);
-}
-
-* {
-  box-sizing: border-box;
-}
-
-html, body, input, button, textarea {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-h1, h2, h3, h4, h5, h6{
-  margin: 0;
-  padding: 0;
-}
-
-
-h1{
-  font-weight: 100;
-  text-align: center;
-  margin-bottom: .5rem;
-}
-
-h2{
-  font-weight: 400;
-  margin-bottom: .4rem;
-  border-bottom: 1px solid #CCC;
-}
-
-
-button, .btn{
-  border: none;
-  padding: 0.5rem;
-  border-radius: 0.3rem;
-  background-color: hsl(207, 53%, 47%);
-  text-decoration: none;
-  cursor: pointer;
-  display: inline-block;
-  font-weight: 600;
-  font-size: 1rem;
-}
-
-
-.instructions {
-  color: #666;
-  font-style: italic;
 }
