--- a/src/app/cert/cert-page/cert-page.component.html
+++ b/src/app/cert/cert-page/cert-page.component.html
@@ -1,16 +1,18 @@
-<h1>Certificate</h1>
-<div *ngIf="cert; else loading">
-  <h2>QR Code</h2>
-  <app-qrcode [data]="cert.qr_content"></app-qrcode>
-  <h2>Details</h2>
-  <app-cert-details [cert]="cert"></app-cert-details>
-  <div class="actions">
-    <button class="cancel" (click)="Remove()">
-      <span class="ti ti-trash"></span>
-      Remove certificate
-    </button>
+<div class="panel">
+  <h1>Certificate</h1>
+  <div *ngIf="cert; else loading">
+    <h2>QR Code</h2>
+    <app-qrcode [data]="cert.qr_content"></app-qrcode>
+    <br>
+    <app-cert-details [cert]="cert"></app-cert-details>
+    <div class="actions">
+      <button class="cancel" (click)="Remove()">
+        <span class="ti ti-trash"></span>
+        Remove certificate
+      </button>
+    </div>
   </div>
+  <ng-template #loading>
+    <p>Loading...</p>
+  </ng-template>
 </div>
-<ng-template #loading>
-  <p>Loading...</p>
-</ng-template>
