--- a/src/app/list/list-page/list-page.component.html
+++ b/src/app/list/list-page/list-page.component.html
@@ -1,13 +1,15 @@
-<h1>Your certificates</h1>
-<div *ngIf="(certificates$ | async) as certs; else nocerts">
-  <app-cert-line *ngFor="let c of certs" [cert]='c'>
-  </app-cert-line>
-</div>
-<ng-template #nocerts>
-  <p class="instructions">You haven't imported any certificate yet. Click on the button under to scan a QR Code.</p>
-</ng-template>
+<div class="panel">
+  <h1>Your certificates</h1>
+  <div *ngIf="(certificates$ | async) as certs; else nocerts">
+    <app-cert-line *ngFor="let c of certs" [cert]='c'>
+    </app-cert-line>
+  </div>
+  <ng-template #nocerts>
+    <p class="instructions">You haven't imported any certificate yet. Click on the button under to scan a QR Code.</p>
+  </ng-template>
 
-<button [routerLink]="'/new'">
-  <span class="ti ti-qrcode"></span>
-  Import a new certificate
-</button>
+  <button [routerLink]="'/new'">
+    <span class="ti ti-qrcode"></span>
+    Import a new certificate
+  </button>
+</div>
