--- a/src/app/add/check/check.component.html
+++ b/src/app/add/check/check.component.html
@@ -1,15 +1,17 @@
-<h1>Import a certificate</h1>
-<div *ngIf="cert$ | async as cert;">
-  <p class="instructions">Please double-check carefully the details from the scanned certicate against those on your source material. If everything matches, click on "Import" at the end.</p>
-  <app-cert-details [cert]="cert"></app-cert-details>
-  <div class="buttons">
-    <button class="cancel" (click)="onCancel()">
-      <span class="ti ti-arrow-back"></span>
-      Cancel
-    </button>
-    <button class="success" (click)="onSubmit(cert)" [disabled]="">
-      <span class="ti ti-check"></span>
-      Import
-    </button>
+<div class="panel">
+  <h1>Import a certificate</h1>
+  <div *ngIf="cert$ | async as cert;">
+    <p class="instructions">Please double-check carefully the details from the scanned certicate against those on your source material. If everything matches, click on "Import" at the end.</p>
+    <app-cert-details [cert]="cert"></app-cert-details>
+    <div class="buttons">
+      <button class="cancel" (click)="onCancel()">
+        <span class="ti ti-arrow-back"></span>
+        Cancel
+      </button>
+      <button class="success" (click)="onSubmit(cert)" [disabled]="">
+        <span class="ti ti-check"></span>
+        Import
+      </button>
+    </div>
   </div>
 </div>
