--- a/src/styles.scss
+++ b/src/styles.scss
@@ -65,6 +65,11 @@ header{
   border-radius: 1rem;
   box-shadow: 0 0 15px rgba(0,0,0,0.3);
 }
+@media screen and (max-width: 40rem) {
+  .panel{
+    margin: 1rem;
+  }
+}
 
 // Create a theme for both color scheem
 @media (prefers-color-scheme: light) {
