--- a/src/app/home/home-page/home-page.component.html
+++ b/src/app/home/home-page/home-page.component.html
@@ -13,19 +13,11 @@
     <span class="ti ti-apps"></span>&nbsp;
     <span>What is this website?</span>
   </h2>
-  <p>This website is a web application that allows you to <strong>import and store</strong>
-    your Digital EU COVID certificates (<em>DCC</em>). Using your device's camera, you'll be
-    able to scan the QR&nbsp;Code of the certificate.</p>
-  <p>Using the latest available technologies, this application can be installed on your
-    smartphone, so you can <strong>use it even while offline</strong>.</p>
-  <p>The certificates are <strong>stored directly on your device</strong>, the application
-    does not connect to any server during usage. <strong>Your data is safe and cannot be leaked.</strong>
+  <p>This website is a web application that allows you to <strong>manage and show</strong>
+    your Digital EU COVID certificates (<em>DCC</em>), using your device's camera to import them.</p>
+  <p>This application can even be installed on your homepage, so you can <strong>use it even while offline</strong>.</p>
+  <p>The certificates are <strong>stored directly on your device</strong>. Your data is safe and cannot be leaked.
     No cookies are stored and no third-party services are used.</p>
-  <p>The application can store an <strong>unlimited amount of certificates</strong>,
-    if you need to keep the certificates of your family or friends.</p>
-  <p>Finally, this application is <strong>Open Source</strong>, the source is directly
-    accessible and modifiable. Should you want it, you can audit it, and even contribute
-    to improve it.</p>
 </div>
 <div class="panel">
   <h2>
@@ -85,14 +77,22 @@
     <span class="ti ti-apps"></span>&nbsp;
     <span>Why this app?</span>
   </h2>
-  <p>In some countries, the official application to use for storing the certificate is bloated with other features, and sometimes even incompatible with some phones.</p>
+  <p>In some countries, the official application to use for storing the certificate is
+     bloated with other features, and sometimes even incompatible with some phones.</p>
+  <p>Meanwhile, spikes in COVID-19 new cases enforces governments to rely more and more
+    on these certificates to allow people to still live a regular life (well, kinda).
+  </p>
 </div>
 <div class="panel">
   <h2>
     <span class="ti ti-help"></span>&nbsp;
     <span>Can I help?</span>
   </h2>
-  <p>Sure! The source code is accessible on this <a href="https://github.com/bchanudet/covid-certificate-pwa">Github repository</a>. Even if you don't know how to code any contribution will be helpful. I will especially appreciate translations of the application to other languages.</p>
+  <p>Sure! This application is <strong>Open Source</strong> and MIT-licensed. </p>
+  <p>You can download the source code, and contribute to it. The source code is accessible
+    on this <a href="https://github.com/bchanudet/covid-certificate-pwa">Github repository</a>.
+    Even if you don't know how to code any contribution will be helpful. I will especially
+    appreciate translations of the application to other languages.</p>
 </div>
 <div class="panel">
   <h2>
