--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   </span>
 </header>
 <router-outlet></router-outlet>
-<div class="panel">
+<div class="panel" *ngIf="hasNewUpdate$ | async">
   <p>
     <span class="ti ti-refresh"></span>&nbsp;
     <span>An update is available. Click on the button to activate it.</span>
