--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,13 @@
+header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+header span {
+  font-size: 1.7rem;
+}
+
 
 .icon {
   max-width: 3rem;
