--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,7 @@ $light: (
   "primary"    : hsl(0, 0%, 13%),
   "secondary"  : hsl(0, 0%, 47%),
   "accent"     : hsl(170, 100%, 24%),
+  "faded"      : hsl(0, 0%, 50%),
 
   "success"    : hsl(170, 100%, 23%),
   "cancel"     : hsl(0, 70%, 25%),
@@ -25,6 +26,7 @@ $dark: (
   "primary"    : hsl(0, 0%, 80%),
   "secondary"  : hsl(0, 0%, 47%),
   "accent"     : hsl(170, 100%, 24%),
+  "faded"      : hsl(0, 0%, 60%),
 
   "success"    : hsl(170, 100%, 23%),
   "cancel"     : hsl(0, 100%, 23%),
@@ -46,6 +48,18 @@ h1, h2, h3, h4, h5, h6, p{
 }
 
 // Non-color related general clauses
+
+h1{
+  font-weight: 100;
+  text-align: center;
+  margin-bottom: .5rem;
+}
+h2{
+  font-weight: 400;
+  margin-bottom: .4rem;
+  border-bottom: 1px solid transparent;
+}
+
 p{
   margin-bottom: 1rem;
   line-height: 1.47rem;
@@ -54,6 +68,13 @@ p:last-child{
   margin-bottom: 0;
 }
 
+code{
+  display: block;
+  overflow: hidden;
+}
+
+
+// Specific presentation
 header{
   position: sticky;
   box-shadow: 0 0 15px rgba(0,0,0,0.3);
@@ -72,6 +93,21 @@ header{
   .panel{
     margin: 1rem;
   }
+}
+
+
+button, .btn{
+  border: none;
+  padding: .6rem;
+  border-radius: 0.4rem;
+  text-decoration: none;
+  cursor: pointer;
+  display: block;
+  max-width: 70%;
+  font-weight: 600;
+  font-size: 1rem;
+  text-align: center;
+  margin: 0 auto;
 }
 
 // Create a theme for both color scheem
