--- a/src/app/cert/cert-page/cert-page.component.html
+++ b/src/app/cert/cert-page/cert-page.component.html
@@ -1,7 +1,10 @@
 <div class="panel">
   <h1>Certificate</h1>
   <div *ngIf="cert; else loading">
-    <h2>QR Code</h2>
+    <h2>
+      <span class="ti ti-qrcode"></span>
+      QR Code
+    </h2>
     <app-qrcode [data]="cert.qr_content"></app-qrcode>
     <br>
     <app-cert-details [cert]="cert"></app-cert-details>
