Improve copy and add disclaimers

--- a/src/app/home/home-page/home-page.component.html
+++ b/src/app/home/home-page/home-page.component.html
@@ -13,11 +13,18 @@
     <span class="ti ti-apps"></span>&nbsp;
     <span>What is this website?</span>
   </h2>
-  <p>This website is a web application that allows you to <strong>manage and show</strong>
-    your Digital EU COVID certificates (<em>DCC</em>), using your device's camera to import them.</p>
-  <p>This application can even be installed on your homepage, so you can <strong>use it even while offline</strong>.</p>
-  <p>The certificates are <strong>stored directly on your device</strong>. Your data is safe and cannot be leaked.
-    No cookies are stored and no third-party services are used.</p>
+  <p>
+    This website is a web application that allows you to <strong>manage and show</strong>
+    your Digital EU COVID certificates (<em>DCC</em>), using your device's camera to import
+    them.
+  </p>
+  <p>
+    This application can even be installed on your homepage, so you can <strong>use it even
+    while offline</strong>.
+  </p>
+  <p>
+    The certificates are <strong>stored directly on your device</strong>. No online nor
+    third-party services are required to use the application.</p>
 </div>
 <div class="panel">
   <h2>
@@ -75,7 +82,7 @@
 <div class="panel">
   <h2>
     <span class="ti ti-apps"></span>&nbsp;
-    <span>Why this app?</span>
+    <span>Why use this app?</span>
   </h2>
   <p>In some countries, the official application to use for storing the certificate is
      bloated with other features, and sometimes even incompatible with some phones.</p>
@@ -88,9 +95,13 @@
     <span class="ti ti-help"></span>&nbsp;
     <span>Can I help?</span>
   </h2>
-  <p>Sure! This application is <strong>Open Source</strong> and MIT-licensed. </p>
-  <p>You can download the source code, and contribute to it. The source code is accessible
-    on this <a href="https://github.com/bchanudet/covid-certificate-pwa">Github repository</a>.
+  <p>
+    Sure! This application is <strong>Open Source</strong> and MIT-licensed.
+    You can download the source code, and contribute to it.
+  </p>
+  <p>
+    The source code is accessible on this
+    <a href="https://github.com/bchanudet/covid-certificate-pwa">Github repository</a>.
     Even if you don't know how to code any contribution will be helpful. I will especially
     appreciate translations of the application to other languages.</p>
 </div>
@@ -103,6 +114,19 @@
     I'm a French developer based in Lyon and not totally psyched about using TousAntiCovid,
     the recommended application that needs Geolocation & Bluetooth permissions, and an exclusion
     to the phone's battery management system only to store a QR Code.</p>
-  <p>More importantly, this application is not endorsed at all by any government or official service.</p>
   <p>Icons are from the <a href="https://tabler-icons.io/">Tabler icons</a> project.</p>
+</div>
+<div class="panel">
+  <h2>
+    <span class="ti ti-info-circle"></span>&nbsp;
+    <span>Disclaimers</span>
+  </h2>
+  <p>
+    <strong>This application is not endorsed by any government or official entity.</strong>
+  </p>
+  <p>
+    Even if the QR Code should be sufficient to prove that you have a valid certificate,
+    it may happen that you'd receive a stern look from law enforcement for the application
+    not being the official application.
+  </p>
 </div>
