--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,7 @@ $light: (
   "secondary"  : hsl(0, 0%, 47%),
   "accent"     : hsl(170, 100%, 24%),
   "faded"      : hsl(0, 0%, 50%),
+  "warning"    : hsl(0,50%, 50%),
 
   "success"    : hsl(170, 100%, 23%),
   "cancel"     : hsl(0, 70%, 25%),
@@ -27,6 +28,7 @@ $dark: (
   "secondary"  : hsl(0, 0%, 47%),
   "accent"     : hsl(170, 100%, 24%),
   "faded"      : hsl(0, 0%, 60%),
+  "warning"    : hsl(0,50%, 50%),
 
   "success"    : hsl(170, 100%, 23%),
   "cancel"     : hsl(0, 100%, 23%),
